<resources>
    <string name="app_name">FlowersChemistryWorkers</string>
    <string name="enter">Войти</string>
    <string name="login">Логин</string>
    <string name="_996">+996</string>
    <string name="next">Далее</string>
    <string name="password">Пароль</string>
    <string name="wrong_data">Неправильный логин или пароль</string>
    <string name="my_orders">Мои заказы</string>
    <string name="all_orders">Все заказы</string>
    <string name="profile">Профиль</string>
    <string name="accept">Принять</string>
    <string name="today">Сегодня</string>
    <string name="quantity">Количество</string>
    <string name="sum">Сумма</string>
    <string name="phone_number">Номер телефона</string>
    <string name="salary">Зарплата</string>
    <string name="som">сом</string>
    <string name="my_data">Мои данные</string>
    <string name="name">Имя</string>
    <string name="phone">Телефон</string>
    <string name="exit">Выйти</string>

    <string-array name="period">
        <item>Сегодня</item>
        <item>Вчера</item>
        <item>Последние 7 дней</item>
        <item>Последние 30 дней</item>
        <item>Последние 90 дней</item>
        <item>Последние 6 месяцев</item>
    </string-array>

    <string-array name="life_cycle_bouquet">
        <item>Выберите</item>
        <item>3 дня</item>
        <item>5 дней</item>
        <item>7 дней</item>
    </string-array>

    <string-array name="filial">
        <item>Токтогула 197а</item>
        <item>Ибраимова 115</item>

    </string-array>

    <string-array name="flowers">
        <item>Выберите цветок</item>
        <item>Розы</item>
        <item>Лилии</item>
        <item>Гортензии</item>
        <item>Ромашки</item>
        <item>Гермини</item>
        <item>Декоративная зелень</item>
    </string-array>

    <string-array name="categories">
        <item>Выберите категорию</item>
        <item>Для девушки</item>
        <item>Популярные</item>
        <item>На день рождения</item>
        <item>Для любимой</item>
        <item>Для коллеги</item>
        <item>Скидки</item>
        <item>Рождение ребенка</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="discount">Скидка</string>
    <string name="delivery">Доставка</string>
    <string name="total">Всего</string>
    <string name="sender">Отправитель:</string>
    <string name="sender_phone">Телефон отправителя</string>
    <string name="wishes_sender">Пожелания отправителя</string>
    <string name="recevier">Получатель:</string>
    <string name="phone_receiver">Телефон получателя</string>
    <string name="note_to_receiver">Записка к получателю</string>
    <string name="active">Активные</string>
    <string name="completed">Завершенные</string>
    <string name="add_bouquet">Добавить букет</string>
    <string name="my_bouquet">Мои букеты</string>
    <string name="sold">Проданные</string>
    <string name="reviews">Отзывы</string>
    <string name="save">Сохранить</string>
    <string name="et_hint">Удивите кого-то особенным дизайном в оранжевых тонах, которые напоминают нежную кожицу. Розы, лилии, герберы, хризантемы и альстромерии составляют эту свежую ароматную композицию. Подойдет любительницам персиковых тонов!</string>
    <string name="composition">Составляющие букета</string>
    <string name="quantity1">Кол-во</string>
    <string name="name_bouquet">Название букета</string>
    <string name="category">Категории</string>
    <string name="description">Описание</string>
    <string name="bouquet_term">Срок букета</string>
    <string name="cancel">Отмена</string>
    <string name="add_new_bouquet">Добавить новый букет</string>
    <string name="clear">Очистить</string>
</resources>