<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    tools:context=".ui.fragments.DetailOrderFromAllOrdersFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="19dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="27dp" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/TextView_22sp_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="20dp"
            android:text="@string/all_orders"
            app:layout_constraintStart_toStartOf="@+id/start_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_detail_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintEnd_toStartOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@+id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/end_guideline"
            app:layout_constraintStart_toStartOf="@+id/start_guideline"
            app:layout_constraintTop_toBottomOf="@+id/rv_detail_order" />

        <TextView
            android:id="@+id/tv_discounts"
            android:layout_marginTop="20dp"
            style="@style/TextView_14sp_medium"
            android:text="@string/discount"
            app:layout_constraintStart_toStartOf="@+id/start_guideline"
            app:layout_constraintTop_toBottomOf="@+id/line" />

        <TextView
            android:id="@+id/tv_discounts_sum"
            android:layout_marginEnd="4dp"
            style="@style/TextView_14sp_medium"
            android:text="-150"
            app:layout_constraintBottom_toBottomOf="@+id/tv_discounts"
            app:layout_constraintEnd_toStartOf="@+id/tv4"
            app:layout_constraintTop_toTopOf="@+id/tv_discounts" />

        <TextView
            android:id="@+id/tv4"
            style="@style/TextView_14sp_medium"
            android:text="@string/som"
            app:layout_constraintBottom_toBottomOf="@+id/tv_discounts_sum"
            app:layout_constraintEnd_toStartOf="@+id/end_guideline"
            app:layout_constraintTop_toTopOf="@+id/tv_discounts_sum" />

        <TextView
            android:id="@+id/tv_delivery"
            android:layout_marginTop="16dp"
            style="@style/TextView_14sp_medium"
            android:text="@string/delivery"
            app:layout_constraintStart_toStartOf="@+id/start_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_discounts" />

        <TextView
            android:id="@+id/tv_delivery_sum"
            android:layout_marginEnd="4dp"
            style="@style/TextView_14sp_medium"
            android:text="-200"
            app:layout_constraintBottom_toBottomOf="@+id/tv_delivery"
            app:layout_constraintEnd_toStartOf="@+id/tv5"
            app:layout_constraintTop_toTopOf="@+id/tv_delivery" />

        <TextView
            android:id="@+id/tv5"
            style="@style/TextView_14sp_medium"
            android:text="@string/som"
            app:layout_constraintBottom_toBottomOf="@+id/tv_delivery_sum"
            app:layout_constraintEnd_toStartOf="@+id/end_guideline"
            app:layout_constraintTop_toTopOf="@+id/tv_delivery_sum" />


        <TextView
            android:id="@+id/tv_total"
            android:layout_marginTop="20dp"
            style="@style/TextView_14sp_medium"
            android:text="@string/total"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/start_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_delivery" />

        <TextView
            android:id="@+id/tv_total_sum"
            android:layout_marginEnd="4dp"
            style="@style/TextView_14sp_medium"
            android:text="2050"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_total"
            app:layout_constraintEnd_toStartOf="@+id/tv6"
            app:layout_constraintTop_toTopOf="@+id/tv_total" />

        <TextView
            android:id="@+id/tv6"
            style="@style/TextView_14sp_medium"
            android:textStyle="bold"
            android:text="@string/som"
            app:layout_constraintBottom_toBottomOf="@+id/tv_total_sum"
            app:layout_constraintEnd_toStartOf="@+id/end_guideline"
            app:layout_constraintTop_toTopOf="@+id/tv_total_sum" />

        <TextView
            android:id="@+id/tv_sender"
            android:layout_marginTop="30dp"
            style="@style/TextView_14sp_medium"
            android:text="@string/sender"
            app:layout_constraintStart_toStartOf="@+id/start_guideline"
           app:layout_constraintTop_toBottomOf="@id/tv_total" />

        <TextView
            android:id="@+id/tv_title_sender_name"
            style="@style/TextView_12sp_grey"
            android:layout_marginTop="20dp"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="@+id/start_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_sender" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardview_name_sender"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="3dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toStartOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@+id/start_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_sender_name"
            app:strokeColor="@color/grey"
            app:strokeWidth="1dp">

            <EditText
                android:id="@+id/ed_name_sender"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@null"
                style="@style/TextView_16sp_medium"
                android:paddingStart="12dp" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tv_title_sender_phone"
            style="@style/TextView_12sp_grey"
            android:layout_marginTop="18dp"
            android:text="@string/sender_phone"
            app:layout_constraintStart_toStartOf="@+id/start_guideline"
            app:layout_constraintTop_toBottomOf="@+id/cardview_name_sender" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardview_phone_sender"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="3dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toStartOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@+id/start_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_sender_phone"
            app:strokeColor="@color/grey"
            app:strokeWidth="1dp">

            <EditText
                android:id="@+id/ed_phone_number"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@null"
                style="@style/TextView_16sp_medium"
                android:paddingStart="12dp" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tv_title_wishes"
            style="@style/TextView_12sp_grey"
            android:layout_marginTop="10dp"
            android:text="@string/wishes_sender"
            app:layout_constraintStart_toStartOf="@+id/start_guideline"
            app:layout_constraintTop_toBottomOf="@+id/cardview_phone_sender" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardview_wishes"
            android:layout_width="0dp"
            android:layout_height="66dp"
            android:layout_marginTop="3dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toStartOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@+id/start_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_wishes"
            app:strokeColor="@color/grey"
            app:strokeWidth="1dp">

            <EditText
                android:id="@+id/ed_wishes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                style="@style/TextView_16sp_medium"
                android:paddingStart="12dp" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tv_receiver"
            android:layout_marginTop="30dp"
            style="@style/TextView_16sp_medium"
            android:text="@string/recevier"
            app:layout_constraintStart_toStartOf="@+id/start_guideline"
            app:layout_constraintTop_toBottomOf="@+id/cardview_wishes" />

        <TextView
            android:id="@+id/tv_title_receiver_name"
            style="@style/TextView_12sp_grey"
            android:layout_marginTop="20dp"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="@+id/start_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_receiver" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardview_name_receiver"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="3dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toStartOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@+id/start_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_receiver_name"
            app:strokeColor="@color/grey"
            app:strokeWidth="1dp">

            <EditText
                android:id="@+id/ed_name_receiver"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@null"
                style="@style/TextView_16sp_medium"
                android:paddingStart="12dp" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tv_title_receiver_phone"
            style="@style/TextView_12sp_grey"
            android:layout_marginTop="18dp"
            android:text="@string/phone_receiver"
            app:layout_constraintStart_toStartOf="@+id/start_guideline"
            app:layout_constraintTop_toBottomOf="@+id/cardview_name_receiver" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardview_phone_receiver"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="3dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toStartOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@+id/start_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_receiver_phone"
            app:strokeColor="@color/grey"
            app:strokeWidth="1dp">

            <EditText
                android:id="@+id/ed_phone_receiver"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@null"
                style="@style/TextView_16sp_medium"
                android:paddingStart="12dp" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tv_title_note"
            style="@style/TextView_12sp_grey"
            android:layout_marginTop="10dp"
            android:text="@string/note_to_receiver"
            app:layout_constraintStart_toStartOf="@+id/start_guideline"
            app:layout_constraintTop_toBottomOf="@+id/cardview_phone_receiver" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardview_note"
            android:layout_width="0dp"
            android:layout_height="66dp"
            android:layout_marginTop="3dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toStartOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@+id/start_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_note"
            app:strokeColor="@color/grey"
            app:strokeWidth="1dp">

            <EditText
                android:id="@+id/ed_note"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                style="@style/TextView_16sp_medium"
                android:paddingStart="12dp" />

        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_accept"
            style="@style/button_green"
            android:layout_marginBottom="44dp"
            android:layout_marginTop="30dp"
            android:text="@string/accept"
            app:layout_constraintTop_toBottomOf="@id/cardview_note"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>