<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegistrationActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="320dp"
        android:layout_height="171dp"
        android:layout_marginTop="73dp"
        android:scaleType="centerCrop"
        android:src="@drawable/icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_login"
        style="@style/TextView_32sp_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="70dp"
        android:text="@string/enter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tv_description"
        style="@style/TextView_12sp_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/phone_number"
        app:layout_constraintStart_toStartOf="@+id/tv_login"
        app:layout_constraintTop_toBottomOf="@+id/tv_login" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="274dp"
        android:layout_height="44dp"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="@+id/tv_description"
        app:layout_constraintTop_toBottomOf="@+id/tv_description">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="10dp"
            app:strokeColor="@color/grey"
            app:strokeWidth="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="274dp"
                android:layout_height="44dp">

                <EditText
                    android:id="@+id/edText_phone"
                    style="@style/TextView_16sp_medium"
                    android:background="@android:color/transparent"
                    android:layout_marginStart="17dp"
                    android:hint="+996 555 555 555"
                    android:inputType="phone"
                    android:paddingTop="10dp"
                    android:paddingBottom="8dp"
                    android:singleLine="true"
                    android:maxLength="13"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_description1"
        style="@style/TextView_12sp_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="@+id/relativeLayout"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />


    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="274dp"
        android:layout_height="44dp"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="@+id/tv_description1"
        app:layout_constraintTop_toBottomOf="@+id/tv_description1">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="10dp"
            app:strokeColor="@color/grey"
            app:strokeWidth="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="274dp"
                android:layout_height="44dp">


                <EditText
                    android:id="@+id/edText_password"
                    style="@style/TextView_16sp_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="17dp"
                    android:background="@android:color/transparent"
                    android:hint="Введите пароль"
                    android:inputType="text"
                    android:paddingTop="10dp"
                    android:paddingBottom="8dp"
                    android:singleLine="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_show_hide_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_close_eye"
                    android:clickable="true"
                    android:focusable="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>
    <TextView
        android:id="@+id/tv_wrong_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/wrong_data"
        android:textColor="@color/pink"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/relativeLayout1"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:layout_width="272dp"
        android:layout_height="43dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/button"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.395"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_wrong_data" />


</androidx.constraintlayout.widget.ConstraintLayout>